# Terra

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  dataset.py  model.py  train.py
